# ai

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  zsh_integration_snippet.txt
Sources/ai/: ai.swift
Sources/aisuggest/: main.swift
src/: main.rs
tests/: cli.rs  heavy_integration.rs  ollama_integration.rs  readme_examples.rs  scenarios.rs
