[package]
name = "term-mate"
version = "0.1.0"
edition = "2021"
default-run = "mate"

[[bin]]
name = "mate"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
crossterm = "0.28"
atty = "0.2"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0.100"

[profile.release]
strip = true
lto = true
opt-level = "z"
